--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>FizzBuzz</h1>
+    <h1>FizzBuzzDOM</h1>
 
     <script src="./js/app.js"></script>
 </body>
