--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>FizzBuzzDOM</h1>
-    <ul class="box"></ul>
+    <div class="container">
+        <h1 class="main_title">FizzBuzzDOM</h1>
+        <ul class="box display_grid"></ul>
+    </div>
 
     <script src="./js/app.js"></script>
 </body>
